404 issue, image pop mobile fix, scrollbar fix

--- a/src/screens/performativeDesign/style.css
+++ b/src/screens/performativeDesign/style.css
@@ -6,7 +6,7 @@
     left: 52%;
     transform: translate(-42%, -50%);
     width: 84%;
-    height: 100%;
+    height: 101%;
     background-color: transparent;
     display:flex;
     justify-content: center;
@@ -50,11 +50,11 @@
         transform: none;
         transform: translate(-50%, 0);
         left:50%;
-        top:130px;
+        top:100px;
        
     }
 .full-pop-image{
-    height: auto;
+    height: 44%;
     width: 80%;
 }
 .pop-up-base-container{
